<resources>
    <string name="app_name">AghsiliniCus</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="walk_througt_body_first">اطلب الان و احصل على غسيلك نظيف بلحظات غسيلك نظيف بلحظات</string>
    <string name="walk_througt_title_first">عندك غسيل كتير؟</string>
    <string name="walk_throught_title_sec">مغسلات عديدة</string>
    <string name="walk_througt_body_sec">اختار من بين العديد من المغسلات و حدد طلبك من المغسلات و حدد طلبك</string>
     <string name="home">Home</string>

    <string name="basket">Basket</string>
     <string name="delivery">Delivery</string>
     <string name="nearest_laundries">Nearest Laundries</string>
    <string name="all">All</string>
    <string name="top_rated_laundry">Top rated laundries</string>
    <string name="search_by_laundry">Search for laundry</string>

    <string name="additional_cost">Additional Cost</string>

    <string name="done_sucessfully">Done SuccessfullY</string>
    <string name="orderid_1234">your order number is  </string>
    <string name="view_order">View Order</string>
    <string name="continuee">Compelte Order</string>
    <string name="go_home">Continue To Home</string>

    <string name="complain">Complain</string>
    <string name="rate_laundry">Rate Laundry</string>

    <string name="send">Send</string>
    <string name="submit_complain">Submit</string>

    <string name="_18_18">كي تصبح عضواً في تطبيق ، يجب عليك أولا أن تقوم بتعبئة استمارة التسجيل، ثم الموافقة والتعهد على الالتزام بأحكام الاستخدام، وعند اعتماد التسجيل و طلب وجبة باستخدام التطبيق؛ فإنك توافق على الشروط و الاحكام الخاصة بنا يحتفظ التطبيق بحق تعديل شروط الاستخدام الماثلة في أي وقت وبدون اشعار مسبق، وأنك توافق على أن كل زيارة تقوم بها للتطبيق سوف تخضع إلى شروط الاستخدام المفعلة في هذا الوقت، وأن إستخدامك للتطبيق في أي وقت يؤكد على أنك قمت بالقراءة و الموافقة على هذه الاحكام و الشروط إن الخدمات عبر الإنترنت غير مقصود منها أن تستعمل بواسطة شخص يقل عمره عن 18 سنة. وفي حالة كان عمركم 18 سنة على الأقل،، حينئذ، يتعين عليكم الاطلاع على هذه الشروط بمساعدة أحد والديكم ويتعين عليهم فهم والموافقة على تلك الشروط حتى يتسنى لكم استخدام تلك الخدمات على المستخدم أن يطلب، من خلال تطبيقنا، الأطعمة من أحد الاسر المنتجة من قائمة الطعام الخاصة بهم على المستخدم أن يضمن أثناء تقديم الطلب ان التفاصيل المزودة من قبله، كرقم الهاتف وعنوان التسليم وما إلى ذلك ،صحيحة. ستتلقى إشعارًا بوضع الطلب من التطبيق يؤكد استلام طلبك.و في حالة عدم توفر طلبك، سيتم إخطارك أيضًا. قد نتصل بك لتأكيد التفاصيل والسعر و وقت التسليم المقدر. هذه الشروط والأحكام تطبق على تطبيق اطبخلى على أجهزة الآيفون، الآيباد، الأندرويد</string>
    <string name="add_new_address">Add new address</string>
    <string name="add_address">Add address</string>
     <string name="ewallet">Wallet</string>
    <string name="compelete_order">Complete Order</string>
    <string name="en">En</string>
     <string name="confirm_order">Confirm Order</string>
    <string name="empty_msg_phone">Please Enter your phone</string>

    <string name="no_laundries_yet">Search for another laundry name , there is no laundries</string>
    <string name="empty_baskrt"> Empty Basket</string>
    <string name="youdidnt_add_any_items">You have not added any product to the cart to request the service
</string>
    <string name="choose_add_first">Please choose the address first
</string>
    <string name="choose_payment_type">Please choose a payment method
</string>

    <string name="no_delivery_add">There are no addresses </string>
    <string name="ypu_didint_add_addess">You have not added any addresses yet for delivery
</string>
    <string name="no_reviews"> No reviews yet</string>
    <string name="no_reviews_yet">The laundry does not have any reviews yet</string>
    <string name="cancel_order">Cancel order</string>
    <string name="enter_complain">Please enter notes</string>
    <string name="please_rate">Please rate the Laundry</string>
    <string name="add_balance">Add Balance</string>

    <string name="add">Add</string>
    <string name="please_enter_amount">Please enter the amount</string>
    <string name="wrongotp">Wronf OTP</string>

         <string name="retry">Retry</string>

        <string name="skip">Skip</string>
        <string name="start">Start</string>

        <string name="login"> Login </string>
        <string name="signup_now">Sign up Now</string>
        <string name="new_user">New Laundry</string>
        <string name="signup">Register  </string>
        <string name="password">password</string>
        <string name="forget_password">Forgot your password</string>
        <string name="login_now">Login now</string>
        <string name="pass_confirm">confirm password</string>
        <string name="bysigningin_you_agree_to">By registering you agree to </string>
        <string name="resend">Resend</string>
        <string name="new_password">New Password</string>
        <string name="skip_register">Skip</string>
        <string name="confirm_new_password">Confirm password</string>
        <string name="email">E-mail</string>
        <string name="send_message">Write your message here</string>
        <string name="new_orde">New order</string>
        <string name="order_status">Order status</string>
        <string name="delivery_informaion">Delivery information</string>
         <string name="phone_number">Mobile number</string>
        <string name="next">next</string>
        <string name="change_pass">change password</string>
        <string name="no_internet">There is no internet connection</string>
        <string name="empty_name_msg">Please Enter your name</string>
        <string name="msg_empty_phone_number">Please enter your Name</string>
        <string name="empty_confirm_password">Please confirm your password</string>
        <string name="both_passwords_must_match">Passwords don\'t match</string>
        <string name="empty_msg_cc">Please Enter Country Code</string>
        <string name="msg_empty_lat">Please Specify your Location</string>
        <string name="msg_empty_address">Please Enter your address</string>
        <string name="undefined">Undefined</string>
        <string name="done">Done</string>
        <string name="not_all_permissions_accepted">not_all_permissions_accepted</string>
        <string name="gps">To Continue , Let your device turn on loaction using Google\'s Loactiaon Service</string>
        <string name="ok">Ok</string>
        <string name="cancel">Cancel</string>
        <string name="msg_empty_new_password">Please enter your password</string>
        <string name="msg_empty_otp">Please enter your OTP</string>
        <string name="km">KM</string>
        <string name="sr">sar</string>
        <string name="no_laundries">There are no laundries</string>
        <string name="no_items_in_this_service">There are no items in this service </string>
        <string name="msg_empty_password">Please enter your password</string>
        <string name="otp">OTP\n</string>
        <string name="name">Laundry name</string>
        <string name="address">Address</string>
        <string name="terms_condition"> Terms and Conditions </string>
        <string name="orders">Orders</string>
        <string name="account">Account</string>
        <string name="more">More</string>
        <string name="new_">New</string>
        <string name="current">Current</string>
        <string name="finshed">Finished</string>
        <string name="urgent">Urgent</string>
        <string name="new_order">New Order</string>
        <string name="driver_on_way">Driver on Way</string>
        <string name="waiting_driver">Waiting Driver</string>
        <string name="driver_recive_from_customer">Driver recive from Customer</string>
        <string name="laundry_recive">Laundry Recived</string>
        <string name="start_prepare">Start Preparation</string>
        <string name="end_prepared">End Preparation</string>
        <string name="driver_recive_from_laundry">Driver recive from Laundry</string>
        <string name="deliverd">Delivered </string>
        <string name="no_orders">There are no orders</string>
        <string name="no_orders_new">There are no new orders</string>
        <string name="no_orders_before"> There are no finished orders </string>
        <string name="no_orders_current"> There are no current orders "</string>
        <string name="signin_first">Register first with the application</string>
        <string name="sign_in_">You can order the washing products you need, but only after logging in first</string>
        <string name="you_can_change_pass_now">You can change your password</string>
        <string name="you_can_delete_your_acc_now">You can delete your account</string>
        <string name="delete_acc">Delete account</string>
        <string name="delivery_addres">Delivery addresses</string>
        <string name="are_yoy_sure_to_delete_acc">Are you sure to delete the account?</string>
        <string name="yes_delte">Yes Delete</string>
        <string name="no_thankes">no thanks</string>
        <string name="you_can_add_or_Delete_Address">You can delete and add a new address</string>
        <string name="wallet">wallet</string>
        <string name="setting">Settings</string>
        <string name="about_us">About Us</string>
        <string name="notifaction">notifications</string>
        <string name="contact_us">Contact Us</string>
        <string name="it">technical support</string>
        <string name="logout">Logout</string>
        <string name="laundry_rates">Customer reviews</string>
        <string name="total">Total</string>

        <string name="amount">Amount</string>
        <string name="bank_name">bank name</string>
        <string name="no_items">There are no products</string>
        <string name="no_items_to_add">There are no products in this service</string>
        <string name="no_products">There are no products</string>
        <string name="no_items_to_Add_to_basket">There are no products to add to the cart or request the service</string>
        <string name="no_otifications">There are no notifications</string>
        <string name="no_notifaction_for_you">There are no notifications</string>
         <string name="abou_app">About the application</string>
        <string name="services">Laundry services</string>
         <string name="choose_among_several_services">Choose from many services and specify your request</string>
        <string name="regular">normal</string>
        <string name="add_to_basket">Add to cart</string>
        <string name="items">Items</string>
        <string name="sar">S.R</string>
        <string name="bill">Bill</string>
        <string name="sub_total">Total</string>
        <string name="delivery_fees">Delivery fees</string>
        <string name="tax_Service">Tax</string>

        <string name="save">Save</string>
        <string name="change_password">Change Password</string>

        <string name="choosen_items">Chosen Items</string>
        <string name="payment_option">payment method</string>

        <string name="preparied_now">Preparing now</string>
        <string name="preparied">Prepared</string>
        <string name="compeleted">Compeleted</string>

     <string name="note">Note</string>
    <string name="make_order_now">Order now</string>
         <string name="balance">Balance</string>
         <string name="e_pay">E-pay</string>
         <string name="have_complain">You have an inquiry or complaint</string>
        <string name="contact_us_to_find_answers">Contact us easily, to find all the answers you need</string>
        <string name="contact_us_throught_email">Contact us via emails</string>
    <string name="welcome">Welcome !</string>
    <string name="choose_from_laundries">Choose from many Laundries and place your order</string>
    <string name="connection_error">Connection Error</string>
    <string name="items_count">Items Count</string>

</resources>