<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/selector_order"
        android:title="@string/orders" />



    <item
        android:id="@+id/basketkFragment"
        android:icon="@drawable/selector_basket"
        android:title="@string/basket" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/selector_account"
        android:title="@string/account" />
    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/selector_more"
        android:title="@string/more" />


 </menu>