<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sucessful_order">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context=".ui.fragment.checkout.SuccessfulOrderFragment">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintTop_toTopOf="parent"
          android:clickable="true"     app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/done" />

            <TextView
                android:id="@+id/title_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
    android:clickable="true"            android:gravity="center"

                android:text="@string/done_sucessfully"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/animation_view" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"

                android:text="@string/orderid_1234"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/title_current" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/continuee"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_21sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_id" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
          app:strokeWidth="@dimen/_1sdp"      android:backgroundTint="@color/transparent"
                android:text="@string/go_home"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_21sdp"
                app:layout_constraintTop_toBottomOf="@id/btn_continue"
                app:strokeColor="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>